CRM - 客戶明細頁擁有者可編輯者等 與 委刊單新增付款狀態

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -124,7 +124,7 @@
         </nav>
         <main class="main-container">
             <section class="content">
-                <div class="company-content clearfix">
+                <div class="company-content">
                     <div class="company-title">
                         <div>
                             <h3>佳量企業股份有限公司 - 台北分公司</h3>
@@ -139,7 +139,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="add"">
+                                <a class="add">
                                     <i class="fas fa-plus" title="新增"></i>
                                 </a>
                             </li>
@@ -157,24 +157,73 @@
                                 </li>
                             </ul>
                         </div>
-                        <ul class="info">
-                            <li>
-                                <p><span>統編</span>24814848</p>
+                        <ul class="info clearfix">
+                            <li class="flex-3">
+                                <p>
+                                    <span class="bg bg-green">擁有者</span>
+                                    <span>Stephen Huang</span>
+                                </p>
+                            </li>
+                            <li class="flex-3">
+                                <p>
+                                    <span class="bg bg-green">可編輯者</span>
+                                    <span>
+                                        John Chang．Irene Hsieh．Jennie Li．Janis Chen．John Chang．Irene Hsieh．Jennie Li．Janis Chen．Irene Hsieh．Jennie Li．Janis Chen
+                                    </span>
+                                </p>
                             </li>
                             <li>
-                                <p><span>電話</span>02-2481-4848</p>
+                                <p>
+                                    <span class="bg bg-greenlight">統編</span>
+                                    <span>24814848</span>
+                                </p>
                             </li>
                             <li>
-                                <p><span>傳真</span>02-2481-4848</p>
+                                <p>
+                                    <span class="bg bg-greenlight">電話</span>
+                                    <span>02-2481-4848</span>
+                                </p>
                             </li>
                             <li>
-                                <p><span>地址</span>487 台北市中山區南京東路三段63號5</p>
+                                <p>
+                                    <span class="bg bg-greenlight">傳真</span>
+                                    <span>02-2481-4848</span>
+                                </p>
+                            </li>
+                            <li class="flex-2">
+                                <p>
+                                    <span class="bg bg-greenlight">地址</span>
+                                    <span>487 台北市中山區南京東路三段 63 號 5 F</span>
+                                </p>
                             </li>
                             <li>
-                                <p><span>Email</span><a href="mailto:service@gmail.com">service@gmail.com</a></p>
+                                <p>
+                                    <span class="bg bg-greenlight">Email</span>
+                                    <span>
+                                        <a href="mailto:service@gmail.com">service@gmail.com</a>
+                                    </span>
+                                </p>
                             </li>
                             <li>
-                                <p><span>匯款帳號</span>10730123456757</p>
+                                <p>
+                                    <span class="bg bg-greenlight">匯款帳號</span>
+                                    <span>10730123456757</span>
+                                </p>
+                            </li>
+                        </ul>
+                        <ul class="edit-record-user clearfix">
+                            <li class="clearfix">
+                                <p class="time">更新：2022-08-25 11:07:24</p>
+                                <p class="id"><span class="bg-c-1">E</span>Eikiy Chang</p>
+                            </li>
+                            <li class="clearfix">
+                                <p class="time">建立：2022-08-23 12:24:04</p>
+                                <p class="id"><span class="bg-c-2">I</span>Irene Hsieh</p>
+                            </li>
+                            <li>
+                                <a class="history popup-link" href="#popup-history-info">
+                                    <i class="fas fa-history" title="變更紀錄"></i>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -190,7 +239,7 @@
                                 <!-- 主要聯絡人會有星星 -->
                                 <p class="star name">張菁嵐（客服）</p>
                                 <p>0988-000123/02-2914-2658</p>
-                                <p>eikiychang@weblisher.com.tw</p>
+                                <p class="flex-2">eikiychang@weblisher.com.tw</p>
                             </a>
                         </li>
                         <li>
@@ -200,7 +249,7 @@
                             <a href="#popup-contact-info" class="popup-link  clearfix">
                                 <p class="name">黃宏偉（財務）</p>
                                 <p>0988-845454/02-8041-1235</p>
-                                <p>janischen@weblisher.com.tw</p>
+                                <p class="flex-2">janischen@weblisher.com.tw</p>
                             </a>
                         </li>
                         <li>
@@ -210,7 +259,7 @@
                             <a href="#popup-contact-info" class="popup-link  clearfix">
                                 <p class="name">陳小春（CS）</p>
                                 <p>0916-854941/02-2914-2658</p>
-                                <p>jennieli@weblisher.com.tw</p>
+                                <p class="flex-2">jennieli@weblisher.com.tw</p>
                             </a>
                         </li>
                         <li>
@@ -220,17 +269,17 @@
                             <a href="#popup-contact-info" class="popup-link  clearfix">
                                 <p class="name">張震（AM）</p>
                                 <p>0916-000123/02-2914-0000</p>
-                                <p>marketing@weblisher.com.tw</p>
+                                <p class="flex-2"><sapn>marketing@weblisher.com.tw</sapn></p>
                             </a>
                         </li>
                         <li>
                             <a class="edit popup-link" href="#popup-edit-contact">
                                 <i class="fas fa-pencil-alt" title="編輯"></i>
                             </a>
-                            <a href="#popup-contact-info" class="clearfix">
+                            <a href="#popup-contact-info" class="popup-link clearfix">
                                 <p class="name">吳怡霖（客服部）</p>
                                 <p>0988-000123/02-2914-2658</p>
-                                <p>service@holkee.com</p>
+                                <p class="flex-2">service@holkee.com</p>
                             </a>
                         </li>
                     </ul>
@@ -246,7 +295,7 @@
                             <a href="#popup-department-info" class="popup-link clearfix">
                                 <p class="name">廣告行銷部門</p>
                                 <p>產業</p>
-                                <p>高雄市三民區高雄市三民區高雄市三民區 807大昌二路67號5樓之2</p>
+                                <p class="flex-2">高雄市三民區高雄市三民區高雄市三民區 807大昌二路67號5樓之2</p>
                             </a>
                         </li>
                         <li>
@@ -256,7 +305,7 @@
                             <a href="#popup-department-info" class="popup-link clearfix">
                                 <p class="name">產品部門</p>
                                 <p>零售業</p>
-                                <p>新北市三峽區 237隆恩街191-1號</p>
+                                <p class="flex-2">新北市三峽區 237隆恩街191-1號</p>
                             </a>
                         </li>
                         <li>
@@ -266,7 +315,7 @@
                             <a href="#popup-department-info" class="popup-link clearfix">
                                 <p class="name">設計部門</p>
                                 <p>美容</p>
-                                <p>台北市中正區 100開封街1段37號5樓</p>
+                                <p class="flex-2">台北市中正區 100開封街1段37號5樓</p>
                             </a>
                         </li>
                         <li>
@@ -276,7 +325,7 @@
                             <a href="#popup-department-info" class="popup-link clearfix">
                                 <p class="name">廣告行銷部門</p>
                                 <p>工業設計</p>
-                                <p>新北市鶯歌區 239鶯桃路91巷3-1號</p>
+                                <p class="flex-2">新北市鶯歌區 239鶯桃路91巷3-1號</p>
                             </a>
                         </li>
                         <li>
@@ -286,7 +335,7 @@
                             <a href="#popup-department-info" class="popup-link clearfix">
                                 <p class="name">產品部門</p>
                                 <p>服務業</p>
-                                <p>嘉義縣太保市 612東勢里博愛路300號</p>
+                                <p class="flex-2">嘉義縣太保市 612東勢里博愛路300號</p>
                             </a>
                         </li>
                     </ul>
@@ -1563,6 +1612,52 @@
                 <fieldset class="field">
                     <input class="btn--primary-xl " type="submit" value="確認下架">
                 </fieldset>
+            </div>
+        </div>
+    </section>
+    <!-- popup 變更紀錄 - 內容-->
+    <section id="popup-history-info" class="popup-finish popup-width-s white-popup mfp-hide">
+        <div class="popup-container">
+            <div class="top-title">
+                <h4><span>變更紀錄</span></h4>
+            </div>
+            <div class="liaison-info history-box">
+                <div class="fillin-box">
+                    <div class="field clearfix">
+                        <div class="fillin-info">
+                            <ul class="edit-record-user">
+                                <li class="clearfix">
+                                    <p class="time">編輯：2023/02/29 09:59:56 </p>
+                                    <p class="id"><span class="bg-c-4">A</span>Anna Liu</p>
+                                </li>
+                                <li class="clearfix">
+                                    <p class="time">編輯：2023/02/01 10:59:01 </p>
+                                    <p class="id"><span class="bg-c-1">E</span>Eikiy Chang</p>
+                                </li>
+                                <li class="clearfix">
+                                    <p class="time">編輯：2022/10/29 14:59:00 </p>
+                                    <p class="id"><span class="bg-c-2">I</span>Irene Hsieh</p>
+                                </li>
+                                <li class="clearfix">
+                                    <p class="time">編輯：2022/07/01 16:10:25 </p>
+                                    <p class="id"><span class="bg-c-3">J</span>Jennie Li</p>
+                                </li>
+                                <li class="clearfix">
+                                    <p class="time">編輯：2022/06/10 07:55:15 </p>
+                                    <p class="id"><span class="bg-c-2">I</span>Irene Hsieh</p>
+                                </li>
+                                <li class="clearfix">
+                                    <p class="time">建立者：2021/05/24 15:30:15 </p>
+                                    <p class="id"><span class="bg-c-1">E</span>Eikiy Chang</p>
+                                </li>
+                                <li class="clearfix">
+                                    <p class="time">擁有者：2021/05/24 15:30:15 </p>
+                                    <p class="id"><span class="bg-c-1">E</span>Eikiy Chang</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
