--- a/CRM/order.html
+++ b/CRM/order.html
@@ -1247,7 +1247,8 @@
                                         <p class="total">$150,000</p>
                                     </div> -->
                                 </div>
-                            </fieldset>                            <fieldset class="clearfix">
+                            </fieldset>                           
+                            <fieldset class="clearfix">
                                 <div class="media-details">
                                     <div class="confirm clearfix">
                                         <div class="discount-title">
@@ -1541,6 +1542,82 @@
                                 <div class="confirm clearfix">
                                     <textarea class="width100" placeholder="備註">最後一個月的費用不同啪啦啪啦</textarea>
                                     <p class="text-remind">*請註明預計付款時間及付款含稅金額 / 如每個月匯款金額不同，需備註各媒體金額分配。</p>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>相關資料</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset class="clearfix">
+                                <label class="item-title">上傳檔案</label>
+                                <div class="confirm">
+                                    <ul class="file-list">
+                                        <li>
+                                            <a class="info" href="#" target="_blank">
+                                                <p>photo.png</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="info" href="#" target="_blank">
+                                                <p>1634107742112.png</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="info" href="#" target="_blank">
+                                                <p>信件對話截圖.pdf</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="info" href="#" target="_blank">
+                                                <p>1634107742112.png</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="info" href="#" target="_blank">
+                                                <p>LINE對話截圖.pdf</p>
+                                            </a>
+                                        </li>
+                                        <li class="btn-add">
+                                            <a href="#">
+                                                <p><i class="fas fa-upload"></i>
+                                                    <span>上傳檔案</span>
+                                                </p>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>付款狀態</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset>
+                                <label class="item-title"><span class="c-red">*</span>收款確認</label>
+                                <div class="confirm both-for-invoice clearfix">
+                                    <div class="option-list">
+                                        <input type="checkbox" name="invoice" value="已收到款項">
+                                        <label for="option">已收到款項</label>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">匯款日期</label>
+                                <div class="confirm clearfix">
+                                    <div class="both-for-date one-field-date clearfix">
+                                        <input type="date" value="2021-11-06">
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">財務部門備註</label>
+                                <div class="confirm clearfix">
+                                    <textarea class="width100" placeholder="備註"></textarea>
                                 </div>
                             </fieldset>
                         </div>
@@ -1980,6 +2057,30 @@
                                         </li>
                                     </ul>
                                 </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>付款狀態</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset>
+                                <label class="item-title">收款確認</label>
+                                <p class="input-value"><span class="">已收到款項</span></p>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">匯款日期</label>
+                                <p class="input-value">
+                                    <span class="calendar">
+                                        <i class="fas fa-calendar-alt"></i>
+                                    </span>
+                                    2023/04/30
+                                </p>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">財務部門備註</label>
+                                <p class="input-value">想講什麼就講什麼吧</p>
                             </fieldset>
                         </div>
                     </div>
