--- a/bolin/539/html/index.html
+++ b/bolin/539/html/index.html
@@ -9,15 +9,37 @@
 		<meta name="HandheldFriendly" content="true">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
+		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<!-- Pushy -->
+		<link rel="stylesheet" href="mobilemenu/pushy.css">
 	</head>
 	<body bgcolor="#F6F6F6">	
+		<!-- Pushy Menu -->
+		<nav class="pushy pushy-right" data-focus="#first-link">
+			<div class="pushy-content">
+				<ul>
+					<li class="pushy-link">
+						<a href="#">台灣彩券官方網站查詢</a>
+					</li>
+					<li class="pushy-link">
+						<a href="#">獲取539最新開獎結果</a>
+					</li>
+					<li class="pushy-link">
+						<a href="#">服務信箱</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<!-- Site Overlay -->
+		<div class="site-overlay"></div>
 		<!-- header -->
 		<header class="header_container">
 			<section class="header_content clearfix">
 				<a class="header_logo" href="#">
 					<img src="images/logo.png"  alt="">
 				</a>
+				<button class="menu-btn"><span><i class="fas fa-bars"></i></span>功能區</button>
 			</section>
 		</header>
 		<!-- main -->
@@ -240,6 +262,8 @@
 			</section>
 		</footer>
 	</body>
+	<!-- pushy JS -->
+	<script src="mobilemenu/pushy.js"></script>
 </html>
 
 
