CRM - 新增黑卡欄位*2

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -129,6 +129,10 @@
                         <div>
                             <h3>佳量企業股份有限公司 - 台北分公司</h3>
                             <p>Dining & Nightlife Reviews, Guides & Listings餐飲、夜生活評論、指南和目錄</p>
+                            <div class="status-type">
+                                <p class="holkee">holkee 黑卡會員</p>
+                                <p class="join-date">於 2023-05-29 加入</p>
+                            </div>
                         </div>
                     </div>
                     <div class="company-information">
