調整上方  立合約人

--- a/CRM/master-contract_print.html
+++ b/CRM/master-contract_print.html
@@ -24,14 +24,11 @@
 </div>
 <div style="padding:10px 0;">
   <font
-    style="max-width: 450px; margin: 5px auto; font-size:15px; color: #333; display: block; line-height: 50px; border-bottom: 1px solid #dbdbdb; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-    立合約人：
-  </font>
-  <br>
-  <font
-    style="font-size:15px; color: #11948a; display: block; line-height: 22px;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-    XXXXXXX有限公司（以下簡稱「甲方」）<br>
-    地址: XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    style="font-size:15px; margin-top: 10px; color: #333; display: block; line-height: 22px;  font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+    立合約人：<span style="color: #11948a; font-weight: normal;">
+      XXXXXXX有限公司（以下簡稱「甲方」）<br>
+      地址: XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    </span>
   </font>
   <font
     style="font-size:15px; margin-top: 10px; color: #333; display: block; line-height: 22px;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
