--- a/CRM/project-contract_print.html
+++ b/CRM/project-contract_print.html
@@ -22,19 +22,19 @@
   </div>
 </div>
 <div style="padding:10px 0;">
-  <font style="max-width: 450px; margin: 5px auto; font-size:15px; color: #333; display: block; line-height: 50px; border-bottom: 1px solid #dbdbdb; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-    立合約人：
-  </font>
-  <br>
-  <font style="font-size:15px; color: #11948a; display: block; line-height: 22px;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+  <font
+    style="font-size:15px; margin-top: 10px; color: #333; display: block; line-height: 22px;  font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+    立合約人：<span style="color: #11948a; font-weight: normal;">
     XXXXXXX有限公司（以下簡稱「甲方」）<br>
     地址: XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    </span>
   </font>
-  <font style="font-size:15px; color: #333; display: block; line-height: 22px;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
-    <br>
+  <font style="font-size:15px; margin-top: 10px; color: #333; display: block; line-height: 22px;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
     威旭數據科技股份有限公司（以下簡稱「乙方」）<br>
-    地址：104 台北市中山區南京東路三段 63 號 8 樓<br>
-    <br>
+    地址：104 台北市中山區南京東路三段 63 號 8 樓
+  </font>
+  <font
+    style="font-size:15px; margin-top: 10px;  color: #333; display: block; line-height: 22px;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
     茲因甲方欲委託乙方為其品牌或產品規劃並執行媒體廣告行銷專案服務，經雙方同意所訂合約條款如下：
   </font>
 </div>
