WiFiOTG - 新增訂購頁、完成預訂與其他小調整畫面
1.新增訂購頁
2.完成預訂頁
3.首頁新增 hashtag
4.方案頁新增 hashtag + breadcrumb
5.新增登入頁

--- a/iiot/WiFiOTG/index.html
+++ b/iiot/WiFiOTG/index.html
@@ -74,7 +74,7 @@
 							<span>NEW!</span>
 							<a href="index.html">中秋特惠</a>
 						</p>
-					</li>
+					</li>	
 					<li>
 						<p><a href="country.html">日本</a></p>
 					</li>
@@ -93,6 +93,23 @@
 				</ul>
 				<ul class="country_list clearfix">
 					<li>
+						<ul class="hashtag clearfix">
+							<li>
+								<p><a class="bg_c_01" href="#">中秋特惠</a></p>
+							</li>
+							<li>
+								<p><a class="bg_c_02" href="#">日本</a></p>
+							</li>
+							<li>
+								<p><a class="bg_c_03" href="#">優惠</a></p>
+							</li>
+							<li>
+								<p><a class="bg_c_04" href="#">亞洲</a></p>
+							</li>
+							<li>
+								<p><a class="bg_c_05" href="#">日本</a></p>
+							</li>
+						</ul>
 						<a href="country.html">
 							<div class="cou_info">
 								<div class="bk">
