--- a/iiot/WiFiOTG/login.html
+++ b/iiot/WiFiOTG/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 	<head>
 		<meta charset="UTF-8">
-		<title>WiFiOTG | WiFi on the Go , Wherever You Go </title>
+		<title>登入 - WiFiOTG | WiFi on the Go , Wherever You Go </title>
 		<meta name='description' content=""/>
 		<meta name='keywords' content=""/>
 		<meta name="MobileOptimized" content="width">
@@ -11,8 +11,19 @@
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	</head>
-	<body>
-		<header class="header_wrap">
+	<!-- 載入中需要把背景卷軸隱藏，可能有別種寫法? -->
+	<body style="overflow: hidden;">
+		<section class="login_cont">
+			<div class="login_type_box">
+				<p class="text">會員快速登入</p>
+				<ul>
+					<li class="apple"><a href="#">Apple</a></li>
+					<li class="google"><a href="#">Google</a></li>
+				</ul>
+			</div>
+		</section>
+		<!-- 看要不要 背景模糊 + bg_blur -->
+		<header class="header_wrap bg_blur ">
 			<section class="cont_middle clearfix">
 				<a class="header_logo" href="index.html">WiFiOTG</a>
 				<nav class="menu">
@@ -36,7 +47,7 @@
 				</nav>
 			</section>
 		</header>
-		<main class="main_wrap">
+		<main class="main_wrap bg_blur ">
 			<section class="inside_banner" style="background-image: url(images/pexels-satoshi-hirayama-2070033.jpg);">
 				<div class="bk">
 					<h3 class="bn_title">日本</h3>
@@ -62,132 +73,133 @@
 						<h3 class="top_title">產品 Ti產產品 Titl產品 Title品 Titletle</h3>
 						<h4 class="plan_subtitle">流量儲值型NT$140/GB</h4>
 						<p class="plan_textinfo">獨家APP開通，即時管理隨時加值自由省<br>
-						台灣開通國外使用，剩餘流量回台繼續用<br>
-						支援手機型號：iPhone XR以上版本<br>
-						必備APP：jetfi WIFI_eSIM APP (<a href="#" target="_blank">APP STORE下載連結</a>)<br>
-						連線速度：4G上網<br>
-						效期說明：訂購完成後30日內完成APP開通，開通後30日內流量有效。<br>
-						操作設定：請詳閱<a href="#" target="_blank">線上說明書(連結待補)</a>，或加入 LINE@ 線上客服搜尋 <span class="f_c_green">@kin8201u</span><br>
-						<span class="f_c_red">注意：本產品購買後30日內未開通或已經APP開通，即無法退費。</span>
+							台灣開通國外使用，剩餘流量回台繼續用<br>
+							支援手機型號：iPhone XR以上版本<br>
+							必備APP：jetfi WIFI_eSIM APP (<a href="#" target="_blank">APP STORE下載連結</a>)<br>
+							連線速度：4G上網<br>
+							效期說明：訂購完成後30日內完成APP開通，開通後30日內流量有效。<br>
+							操作設定：請詳閱<a href="#" target="_blank">線上說明書(連結待補)</a>，或加入 LINE@ 線上客服搜尋 <span
+								class="f_c_green">@kin8201u</span><br>
+							<span class="f_c_red">注意：本產品購買後30日內未開通或已經APP開通，即無法退費。</span>
 						</p>
 					</div>
 				</div>
 			</section>
 			<section class="plan_content bg_c1">
 				<h3 class="top_title">請選擇方案</h3>
-			   	<ul class="plan_list clearfix">
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本1G套餐</h4>
+				<ul class="plan_list clearfix">
+					<li>
+						<div class="plan_info">
+							<div class="plan_info_top">
+								<h4 class="plan_title">日本1G套餐</h4>
 								<p class="plan_price">
 									<span>優惠價</span>
 									<span>$</span>140
 									<!-- <span class="original-price">原價 799 元</span> -->
 								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>初體驗及輕度用量加值好選擇<br>
-								加值嗎?還沒有嘗試過eSIM的方便嗎?
-								快來體驗</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">開始預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本3G套餐</h4>
+							</div>
+							<div class="other_info">
+								<p>初體驗及輕度用量加值好選擇<br>
+									加值嗎?還沒有嘗試過eSIM的方便嗎?
+									快來體驗</p>
+							</div>
+							<p class="plan_order">
+								<a href="order.html">開始預訂</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="plan_info">
+							<div class="plan_info_top">
+								<h4 class="plan_title">日本3G套餐</h4>
 								<p class="plan_price">
 									<span>優惠價</span>
 									<span>$</span>399
 									<span class="original-price">原價 420 元</span>
 								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>中度用量優質選<br>
-								95折回饋好朋友</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">開始預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本5G套餐</h4>
-					   			<p class="plan_price">
+							</div>
+							<div class="other_info">
+								<p>中度用量優質選<br>
+									95折回饋好朋友</p>
+							</div>
+							<p class="plan_order">
+								<a href="order.html">開始預訂</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="plan_info">
+							<div class="plan_info_top">
+								<h4 class="plan_title">日本5G套餐</h4>
+								<p class="plan_price">
 									<span>優惠價</span>
 									<span>$</span>630
 									<span class="original-price">原價 700 元</span>
 								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>重度用量優質選<br>
-								9折回饋好朋友</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">開始預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-					<!-- <li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
-					   			<p class="plan_price">
+							</div>
+							<div class="other_info">
+								<p>重度用量優質選<br>
+									9折回饋好朋友</p>
+							</div>
+							<p class="plan_order">
+								<a href="order.html">開始預訂</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="plan_info">
+							<div class="plan_info_top">
+								<h4 class="plan_title">日本吃到飽</h4>
+								<p class="plan_price">
 									<span>$</span>2599
 									<span class="original-price">原價 1499 元</span>
 								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
-					   			雙向多國語言即時翻譯、語言不通免驚!</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">立即預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
+							</div>
+							<div class="other_info">
+								<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
+									雙向多國語言即時翻譯、語言不通免驚!</p>
+							</div>
+							<p class="plan_order">
+								<a href="order.html">立即預訂</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="plan_info">
+							<div class="plan_info_top">
+								<h4 class="plan_title">日本吃到飽</h4>
 								<p class="plan_price">
 									<span>$</span>199
 									<span class="original-price">原價 599 元</span>
 								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>每天500MB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">立即預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
+							</div>
+							<div class="other_info">
+								<p>每天500MB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新</p>
+							</div>
+							<p class="plan_order">
+								<a href="order.html">立即預訂</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="plan_info">
+							<div class="plan_info_top">
+								<h4 class="plan_title">日本吃到飽</h4>
 								<p class="plan_price">
 									<span>$</span>199
 									<span class="original-price">原價 699 元</span>
 								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
-					   			雙向多國語言即時翻譯、語言不通免驚!</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">立即預訂</a>
-					   		</p>
-					   	</div>
-			   		</li> -->
-			   	</ul> 
+							</div>
+							<div class="other_info">
+								<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
+									雙向多國語言即時翻譯、語言不通免驚!</p>
+							</div>
+							<p class="plan_order">
+								<a href="order.html">立即預訂</a>
+							</p>
+						</div>
+					</li>
+				</ul>
 			</section>
 			<section class="wifiotg_info">
 				<div class="cont_middle">
@@ -197,7 +209,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer_wrap">
+		<footer class="footer_wrap bg_blur">
 			<section class="cont_middle">
 				<div class="copyright">
 					<a class="logo">
